==================
### 1.6.7
==================

Bug fixes:
- Homunculus support.
- Slightly improved compatibility with some servers.


==================
### 1.6.6
==================

New features:
- Support for servers that use GameGuard. (bRO, inRO and pRO Sakray)

Bug fixes:
- AutoSwitch fixed.
- Work around some private servers' anti-bot detection.

New config options:
- gameGuard (flag)
  Set this option to 1 if you play inRO or pRO Sakray.
  Set this option to 2 if you play bRO.

Table files:
- Support for Einbroch portals and packets. You need the latest tablepack
  for this.

Credits:
- pyronix: autoswitch bugfix
- illusionist: help with bRO support.


==================
### 1.6.4
==================

Bug fixes:
- Fixed mRO support.
- Fixed iRO Sakray support.


==================
### 1.6.3
==================

New features:
- Support for baby classes! Kore will now be able to identify these
  classes correctly.
- Storage kafra password. See storageAuto_password below.
- Ability to evade Freya's anti-bot system.
- Support for eAthena servers using sakexe628. Use serverType 5 for these.

Bug fixes:
- Vending zeny limit is no longer limited to 10 million.

New config options:
- storageAuto_password (number)
  If your server is using a storage password, put the password here.
  You must also set storageEncryptKey!

- storageEncryptKey (key)
  Put your server's encryption key here. For mRO, it is:
  0x050B6F79, 0x0202C179, 0x00E20120, 0x04FA43E3, 0x0179B6C8, 0x05973DF2, 0x07D8D6B, 0x08CB9ED9

  The key may change in the future.

Credits:
- Harry: Perl implementation of the Crypton encyrption algorithm.
- dorky, BoNeS, piroJOKE: help in serverType 5 support


==================
### 1.6.2
==================

*** INCOMPATIBLE CHANGES ***:
- Items named e.g. "Unknown 1234" are now called "Unknown #1234" so that
  you can use their name in items_control.txt.
- The syntax for chat room commands has been changed. See below.